# nexus-quant-architecture

./: .env.example  .gitignore  README.md  app.py  autonomous_agent.py  clean_comments.py  config.yaml  derivatives_analyzer.py  news_analyzer.py  portfolio_tracker.py  requirements.txt  setup.py  simple_trading.py  test_gemini.py  test_llm_smoke.py  test_trading.py  trading_dashboard.py
hft/: README.md
hft/c_data_plane/: CMakeLists.txt
hft/c_data_plane/include/: ef_vi_receiver.h  itch_parser.h  md_event.h  order_entry_gateway.h  platform.h  spsc_ring.h
hft/c_data_plane/src/: ef_vi_receiver.c  itch_parser.c  main.c  order_entry_gateway.c
hft/docs/: architecture.md  calibration_ops.md  quantitative_models.md
hft/java_orchestration/: pom.xml
hft/java_orchestration/src/main/java/com/hft/benchmark/: RiskGateBenchmark.java
hft/java_orchestration/src/main/java/com/hft/config/: SystemConfig.java
hft/java_orchestration/src/main/java/com/hft/core/: DisruptorPipeline.java  MdEvent.java  SharedMemoryBridge.java
hft/java_orchestration/src/main/java/com/hft/journal/: ChronicleJournal.java  PositionRecovery.java
hft/java_orchestration/src/main/java/com/hft/lob/: LOBReconstructionHandler.java
hft/java_orchestration/src/main/java/com/hft/oeg/: OrderConstructor.java
hft/java_orchestration/src/main/java/com/hft/risk/: PreTradeRiskGateway.java
hft/java_orchestration/src/main/java/com/hft/signal/: FeatureVector.java  HMMRegimeFilter.java  HawkesIntensityEstimator.java  SignalGenerationHandler.java
hft/scripts/: cpu_affinity.sh  huge_pages.sh  jvm_startup.sh  network_tuning.sh
trading_model/: __init__.py  main.py  pyvenv.cfg
trading_model/analysis/: __init__.py  market_analyzer.py  news_analyzer.py
trading_model/config/: settings.py
trading_model/llm/: provider.py
trading_model/models/: base_strategy.py
trading_model/utils/: data_fetcher.py
